fix: sticky horizontal scroll

--- a/src/components/composition/Sticky/Sticky.module.scss
+++ b/src/components/composition/Sticky/Sticky.module.scss
@@ -15,6 +15,7 @@
 
   @media screen and (min-width: breakpoint.$xl) {
     max-height: 100vh;
+    overflow-x: hidden;
     overflow-y: auto;
   }
 }
